<?xml version="1.0"?>
<package format="2">
  <name>lcd1602_driver</name>
  <version>0.0.1</version>
  <description>Driver for 1602 LCD connected via I2C</description>
  <maintainer email="road.and.track@gmail.com">road.and.track@gmail.com</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
